--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>MAISON — Boutique</title>
+<title>MAISON DE JUNIOR — Boutique </title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,400&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet"/>
 <style>
   :root {
@@ -481,7 +481,7 @@
 
 <!-- HEADER -->
 <header>
-  <a href="#" class="logo">MAISON<span>.</span></a>
+  <a href="#" class="logo">MAISON DE JUNIOR<span>.</span></a>
   <button class="cart-btn" onclick="toggleCart()">
     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
       <circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/>
@@ -495,7 +495,7 @@
 <!-- HERO -->
 <section class="hero">
   <div class="hero-content">
-    <h1>Bienvenue chez Maison</h1>
+    <h1>Bienvenue chez Maison DE JUNIOR</h1>
     <p>Élégance au quotidien</p>
     <div class="hero-line"></div>
   </div>
